--- a/cssBayan/css/style.css
+++ b/cssBayan/css/style.css
@@ -1,167 +1,82 @@
-%* {margin:0;padding:0;}
+* {margin:0;padding:0;}
 
 html {
     box-sizing: border-box; /*изменен алгоритм расчета размера блоко*/
     scroll-behavior: smooth; /*плавная прокрутка*/
 }
 
-*,
-*::before,
-*::after 
-{
-    box-sizing: inherit; /*наследуется алгоритм расчета блока*/
-}
-
 
 body {
     background: #EDF2EC; /*цвет фона*/
-    width: 90%;
-    height: 90%;
-    font-family: "Inter", sans-serif;
-     font-style: normal;
-    font-size: 20px;
-    Line-height: 35px;
-    font-weight: 400;
-    color:  #636060;
-    
+    display: flex;
+    justify-content: center;
 
 }
 .wrapper {
-
-    margin: 0 auto; /*выравнивание по центру*/
-   
-    background: burlywood; /*цвет фона*/
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 3%;
+    padding: 3%;
+    max-width:100%;
+    max-width: 100%;
+    box-shadow: 0 8px 26px rgba(0,0,0,0.4), 0 28px 30px rgba(0,0,0,0.3);
+    border-radius: 5%;
 }
 
-
-.prices_acor {
-    width: 322px;
-    min-height: 282px;
-    border: 1px solid #E3E1D5;
-    border-radius: 20px;
-   display: inline-flex;
-flex-direction: column;
- align-items: center;
-justify-content: center;
-
-}
-.acor-body{
-    width: 250px;
-    height: 154px;
-    background-color: #D6E7D2;
-    border-radius: 20px;
-
-
-
-
- 
- 
-}
-.prices_acor .acor-body {
-     height: 0;
-     overflow: hidden; /*содержимое, выходящее за пределы блока элемента, будет скрыто.*/
+.acor-body {
+    height: 0;
+    color: rgba(0, 0, 0, 0);
+    background-color: #BFE2FF;
+    line-height: 18px;
+    padding: 0 30px;
+    box-sizing: border-box;
     transition: color 0.5s, padding 0.5s;
+    overflow: hidden;
+    font-family: Verdana, sans-serif; 
+    font-size: 16px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2), 0 10px 16px rgba(0,0,0,0.2);
 }
 
-
-.prices_acor label {
+.acor-container label {
     cursor: pointer;
-    background-color: #EDF2EC;
+    background-color: #337AB7;
     display: block;
-    width: 250px;
-    height: 50px;
-    border-radius: 20px;
-    margin-bottom: 32px;
-    font-family: Inter;
-    font-size: 20px;
-    font-weight: 700;
-    line-height: 20px;
-   padding: 16px 110px 16px 40px;
-     color: #000000;
-    position: relative;
+    padding: 15px 20px;
+    width: 100%;
+    color: #BFE2FF;
+    font-weight: 300;
+    box-sizing: border-box;
     z-index: 100;
+    font-family: Verdana, sans-serif;   
+    font-size: 18px;
+    margin: 0 0 5px;
     transition: color .35s;
-    
-    
 }
-.prices_acor label:hover {
-    background: #D6E7D2;
+.acor-container label:hover {
+    color: #FFF;
 }
-
-
-
-.prices_acor input{
+.acor-container input{
     display: none;
 }
-.prices_acor label:before {
-    content: url("../images/accordion_btn_pr.svg");
+.acor-container label:before {
+    content: '\276F';
     float: right;
-    position: absolute;
-  left: 80%;
-  
-
 }
-
-.prices_acor input:checked + label:before {
+.acor-container input:checked + label {
+    background-color: #285f8f;
+    color: #FFF;
+    box-shadow: 0 8px 26px rgba(0,0,0,0.4), 0 28px 30px rgba(0,0,0,0.3);
+}
+.acor-container input:checked + label:before {
     transition: transform .35s;
-    transform: rotate(180deg);
+    transform: rotate(90deg);
 }
-.prices_acor input:checked + label + .acor-body {
+.acor-container input:checked + label + .acor-body {
     height: auto;
     margin-top: -5px;
     color: #000;
     padding: 20px 30px 10px;
-
-}
-
-
-h3{
-font-family: Inter;
-font-size: 20px;
-font-weight: 700;
-line-height: 20px;
-letter-spacing: 0em;
-text-align: left;
-margin-bottom: 12px;
-}
-.acor_hr {
-    color: #AEA1A1;
-    width: 164px;
-    height: 0.5px;
-    align-items: center;
-}
-.acor_text{
-    font-family: Inter;
-font-size: 10px;
-font-weight: 300;
-line-height: 10px;
-letter-spacing: 0em;
-text-align: left;
-margin: 6px 0px;
-
-
-}
-.acor_price {
-    font-family: Inter;
-font-size: 12px;
-font-weight: 400;
-line-height: 20px;
-letter-spacing: 0em;
-text-align: left;
-
-
-}
-
-.acor_button {
-    width: 86px;
-    height: 25px;
-    background-color: #FFFFFF;
-    border-radius: 10px;
-    border: #FFFFFF;
-}
-.acor_button:hover {
-    background: #E06733;
-    color: #FFFFFF;
 }
 
 
